@@ -28,6 +28,8 @@
   add usage for serdo (Nikola Vladov)
   fix msvc -d followed by msvc -h (would send SIGHUP to pid 1, i.e. kill
     minit; found by Paul Fox)
+  added small special-purpose malloc using a static buffer before
+    calling the real malloc (Nikola Vladov)
 
 0.9.1:
   fix embarassing typo in msvc (Gelu G. Lupas)
